--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URL='mongodb+srv://fastclinic:RAGeHy8_@fastclinic.cjnvo.mongodb.net/hospital_demo?retryWrites=true&w=majority'
+MONGODB_URL='mongodb+srv://fastclinic:RAGeHy8_@fastclinic.cjnvo.mongodb.net/hospital_demo_mayfield?retryWrites=true&w=majority'
 PORT=3000
